03 Responsive/homework/YuBil/02/css/desktop.css
@font-face {
    font-family: "MyriadProCondRegular";
    font-weight: bold;
    src: url("../fonts/MyriadProCondRegular/MyriadProCondRegular.woff") format("woff"),
    url("../fonts/MyriadProCondRegular/MyriadProCondRegular.ttf") format("truetype");
}

@font-face {
    font-family: "MyriadPro-BoldCond";
    src: url("../fonts/MyriadPro-BoldCond.otf");
}

@font-face {
    font-family: "Intro";
    font-weight: bold;
    src: url("../fonts/Intro.otf");
}

*, 
*:after,
*:before {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

.hide { display: none; }

h1, 
h2, 
p { text-align: center; }

header::before {
    content: "";
    display: inline-block;
    height: 100%;
    vertical-align: middle;
}

a,
.img-share { 
    display: inline-block;
    vertical-align: middle;
    text-decoration: none;
    outline: none;
}

.nav-menu { display: inline-block; }

.nav-menu li { 
    display: inline-block;
    font-family: 'MyriadProCondRegular', Arial, sans-serif;
    font-size: 16px;
    color: #0f5ee0;    
    text-transform: uppercase;
    letter-spacing: 4px;
    margin-right: 38px;
}

li a:hover { color: #ff7200; }

header { 
    margin-top: 77px;
    text-align: center;
}

.img-share  { 
    background-image: url("../img/icon-share.png");
    background-size: cover;
    width: 20px;
    height: 20px;
    background-position: 0 -40px;
    content: "";

    margin-right: 45px;
}

.img-share:hover { 
    background-position: 0 -80px;
}

img { 
    display: inline-block;
    width: 100%;
    height: 100%;
}

.img-menu { display: none; }

.img-logo {
    width: 100px;
    height: 24px;
    margin-right: 60px;
}

.img-lang {
    width: 21px;
    height: 15px;
    margin-left: 7px;
}

main { 
    background: url("../img/bg-white.jpg") -312px -157px;
    background-size: 1760px;
    padding-top: 75px;
    position: relative;
}

main .text-slogan { 
    margin-bottom: 51px; 
    font-family: 'Intro', Arial, sans-serif;
    font-size: 27px;
    letter-spacing: 3px;
    line-height: 35px;
    text-transform: uppercase;
}

main .text-slogan-secondary { 
    margin-bottom: 60px; 
    font-family: Arial, sans-serif;
    font-size: 16px;
    line-height: 33px;  
}

.badge-price {
    position: absolute;
    right: 70px;
    bottom: 90px;

    width: 165px;
    height: 165px;
    border-radius: 50%;
    
    display: flex;
    align-items: center;
    justify-content: center;

    color: #fff;
    background-color: #FF634E;

    font-family: 'Intro', Arial, sans-serif;
    font-weight: 900;
    font-size: 48px;
    line-height: 30px;

    transform: rotate(12deg);
}

.badge-price p:before,
.badge-price p:after {
    display: block;
    font-family: 'Intro', Arial, sans-serif;
    font-weight: 400;
    font-size: 15px;
    opacity: .4;
}

.badge-price p:before {
    content: "от";
    text-align: left;
    
}
.badge-price p:after {
    content: "в месяц";
    text-align: right;
}

.currency { 
    font-family: 'Intro', Arial, sans-serif;
    font-weight: 900;
    font-size: 30px;
    vertical-align: top;
    line-height: 15px;
}

.img-positioned {
    position: absolute;
    z-index: 2;
}

.img-smile1 {
    width: 85px;
    height: 85px;
    left: 123px;
    bottom: 37px;
}

.img-smile2 {
    width: 110px;
    height: 110px;
    right: 270px;
    bottom: -145px;
}

.img-rounded { 
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
}

footer { 
    position: relative;
    z-index: 1;
    background-image: url("../img/bg-green.jpg");
    background-size: cover;
    padding-top: 68px;
    padding-bottom: 35px;
    color: #fff;
}

footer .text-slogan {
    font-family: 'Intro', Arial, sans-serif;
    font-size: 27px;
    text-transform: uppercase;
    letter-spacing: 3px;
    line-height: 37px;
}

.img-cup {
    width: 270px;
    height: 360px;
    left: 65px;
    top: 255px;
}

.img-popcorn {
    width: 385px;
    height: 350px;
    right: 170px;
    top: 273px;
}

/* Buttons */
button {
    display: block;
    font-family: 'Intro';
    font-size: 15px;
    color: #fff;
    text-transform: uppercase;
    letter-spacing: 2px;
    border: none;
    
    border-radius: 27px;
    box-shadow: 0 15px 68px 0 rgba(0,0,0,0.2);
    padding: 18px 45px;
    margin: 20px auto;
}

.btn-main { 
    background-color: #27D481; 
    margin-bottom: 100px;
}

.btn-footer { background-color: #FF634E; }

.btn-menu {
    font-family: 'MyriadPro-BoldCond', Arial, sans-serif;
    font-size: 16px;
    border-radius: 8px;
    box-shadow: none;
    letter-spacing: 4px;
}

.btn-menu-login { 
    background: #ff7200;
    padding: 7px 29px;
    margin-left: 1px;
}

.btn-menu-order {
    background: #27d481;
    padding: 7px 16px;
    margin-left: -15px;
}
/* END Buttons */
    
/* Video styling */
.video-wrapper {
    margin-top: 47px;
    margin-bottom: 62px;
    padding: 16px 300px;
}

figure {
    position: relative;
    z-index: 3;
    padding-bottom: 56.25%; /* 16:9 */
    width: 100%;
    height: 0;
}

iframe {
    height: 100%;
    width: 100%;
    position: absolute;
    left: 0;
    top: 0;
    border-radius: 7px;
}
/* END Video styling */

